<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Companion Device</string>
    <!-- Default value for associated device list item [CHAR LIMIT = 20] -->
    <string name="default_device_name">Associated Device</string>
    <!-- Label for button to add an associated device [CHAR LIMIT=50] -->
    <string name="add_device_title">Add Associated Device</string>
    <!-- title for adding associated device [CHAR LIMIT=50]-->
    <string name="add_associated_device_title">Connect a companion device</string>
    <!-- Instruction for adding associated device [CHAR LIMIT=100] -->
    <string name="add_associated_device_instruction">You can use your phone as a companion device to help manage your driving experience</string>
    <!-- Instruction for opening Companion App [CHAR LIMIT=60] -->
    <string name="associated_device_install_app">Make sure you have <b>Companion App</b> installed on your phone</string>
    <!-- Title for confirm pairing code fragment [CHAR LIMIT=60]-->
    <string name="associated_device_pairing_code_title">Confirm code on phone</string>
    <!-- Message text shown in confirm pairing code fragment [CHAR LIMIT=100]-->
    <string name="associated_device_pairing_message">Confirm that this matches the code shown on your phone</string>
    <!-- Message shown when user associates a device successfully [CHAR LIMIT=100]-->
    <string name="associated_device_success">Device has been associated successfully</string>
    <!-- Adding an associated device [CHAR LIMIT=40]-->
    <string name="associated_device_select_device">Open the app and connect to &lt;b><xliff:g id="car_name" example="MyCar">%1$s</xliff:g>&lt;b></string>
    <!-- Title for remove device dialog [CHAR LIMIT=40]-->
    <string name="remove_associated_device_title">Forget &lt;b><xliff:g id="car_name" example="MyCar">%1$s</xliff:g>&lt;/b>&#63;</string>
    <!-- Message for remove device dialog [CHAR LIMIT=150] -->
    <string name="remove_associated_device_message">This car will no longer be paired with this device. You will additionally need to remove this car from the Companion app.</string>
    <!-- Toast message to show when an associated device has been removed successfully [CHAR LIMIT=60] -->
    <string name="device_removed_success_toast_text"><xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g> forgotten</string>
    <!-- Toast message to show when an associated device has not been removed successfully [CHAR LIMIT=100] -->
    <string name="device_removed_failure_toast_text">Failed to forget <xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g></string>
    <!-- Toast message to lead a user continue setup on the phone [CHAR LIMIT=60] -->
    <string name="continue_setup_toast_text">Continue setup on your phone</string>
    <!-- Title for error screen [CHAR LIMIT=40]-->
    <string name="error_screen_title">Something went wrong</string>
    <!-- Message for error screen [CHAR LIMIT=150]-->
    <string name="error_screen_message">Unfortunately, this screen couldn\'t display properly. Please try again.</string>
    <!-- Title for turn on bluetooth fragment [CHAR LIMIT=40] -->
    <string name="turn_on_bluetooth_title">Turn on Bluetooth</string>
    <!-- Message for turn on bluetooth fragment [CHAR LIMIT=150]-->
    <string name="turn_on_bluetooth_message">To set up your phone as a companion device, your car needs Bluetooth. </string>
    <!-- Title for turn on bluetooth dialog [CHAR LIMIT=40] -->
    <string name="turn_on_bluetooth_dialog_title">Turn on Bluetooth&#63;</string>
    <!-- Message for turn on bluetooth dialog [CHAR LIMIT=150]-->
    <string name="turn_on_bluetooth_dialog_message">To connect to your companion device, your car needs Bluetooth.</string>

    <!-- Accept button text [CHAR LIMIT=20] -->
    <string name="accept">Accept</string>
    <!-- Reject button text [CHAR LIMIT=20] -->
    <string name="reject">Reject</string>
    <!-- Cancel button text [CHAR LIMIT=20] -->
    <string name="confirm">Confirm</string>
    <!-- Cancel button text [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- Remove button text [CHAR LIMIT=20]-->
    <string name="remove">Remove</string>
    <!-- Accept button text [CHAR LIMIT=20] -->
    <string name="ok">OK</string>
    <!-- Connection switch title [CHAR LIMIT=20]-->
    <string name="connection">Connection</string>
    <!-- Forget device button title [CHAR LIMIT=40]-->
    <string name="forget_title">Forget this device</string>
    <!-- Forget button text [CHAR LIMIT=20]-->
    <string name="forget">Forget</string>
    <!-- Disable button text [CHAR LIMIT=20]-->
    <string name="disable">Disable</string>
    <!-- Enable button text [CHAR LIMIT=20]-->
    <string name="enable">Enable</string>
    <!-- Continue button text [CHAR LIMIT=20]-->
    <string name="continue_button">Continue</string>
    <!-- Retry button text [CHAR LIMIT=20]-->
    <string name="retry">Try again</string>
    <!-- Turn on button text [CHAR LIMIT=20]-->
    <string name="turn_on">Turn on</string>
    <!-- Not now button text [CHAR LIMIT=20]-->
    <string name="not_now">Not now</string>

    <!-- Connected status text [CHAR LIMIT=20]-->
    <string name="connected">Connected</string>
    <!-- Not detected status text [CHAR LIMIT=20]-->
    <string name="notDetected">Not detected</string>
    <!-- Disconnected status text [CHAR LIMIT=20]-->
    <string name="disconnected">Disconnected</string>
    <!-- Unknown status text [CHAR LIMIT=20]-->
    <string name="unknown">Unknown</string>

    <!-- NotificationMsg Feature strings-->
    <!-- Notification Channel name for the Companion Device Text Message notifications service [CHAR LIMIT=80]-->
    <string name="notification_msg_channel_name">Companion Device Text Message Notifications Channel</string>
    <!-- Notification Channel description for the Companion Device Text Message notifications service [CHAR LIMIT=50]-->
    <string name="notification_msg_channel_description">Phone Text Message Receiver Service</string>
    <!--Notification Channel name for the silent "message notification service running" notification [CHAR LIMIT=100]-->
    <string name="app_running_msg_channel_name">Phone Text Message service running</string>
    <!--Notification Channel description for the silent "message notification service running" notification [CHAR LIMIT=50]-->
    <string name="app_running_msg_notification_title">Phone Text Messaging service is active</string>
    <string name="app_running_msg_notification_content">Receiving Messages via Companion Device</string>

    <!-- Title for trusted device feature [CHAR LIMIT=40]-->
    <string name="trusted_device_feature_title">Unlock profile with phone</string>
    <!-- Instruction for trusted device feature [CHAR LIMIT=80]-->
    <string name="trusted_device_feature_instruction">Check your Companion App to set unlocking options</string>
    <!-- Trusted device item title [CHAR LIMIT=80]-->
    <string name="trusted_device_item_title">Let &lt;b><xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g>&lt;/b> unlock my profile</string>
    <!-- Title for device not connected dialog [CHAR LIMIT=50]-->
    <string name="device_not_connected_dialog_title">Your phone must be actively connected</string>
    <!-- Message for device not connected dialog [CHAR LIMIT=150]-->
    <string name="device_not_connected_dialog_message">To turn on this feature, make sure your car and phone have bluetooth turned on and are near each other</string>
    <!-- Toast message to show when a trusted device has been enrolled successfully [CHAR LIMIT=100]-->
    <string name="trusted_device_enrollment_success_message">&lt;b><xliff:g id="phone_name" example="MyPhone">%1$s</xliff:g>&lt;/b> can now unlock your profile</string>

    <!-- Title for create profile lock dialog [CHAR LIMIT=50]-->
    <string name="create_profile_lock_dialog_title">Create a primary profile lock</string>
    <!-- Message for create profile lock dialog [CHAR LIMIT=150]-->
    <string name="create_profile_lock_dialog_message">To use your phone to unlock your profile, you need a primary profile lock as a backup</string>
    <!-- Title for unlock profile to finish dialog [CHAR LIMIT=50]-->
    <string name="unlock_profile_to_finish_title">Unlock your profile to finish</string>
    <!-- Message for unlock profile to finish dialog [CHAR LIMIT=150]-->
    <string name="unlock_profile_to_finish_message">You\'ve created a new profile lock. Next, enter it again to confirm that your phone can unlock your profile automatically</string>

    <!-- Text for disabling device connection. [CHAR LIMIT=60]-->
    <string name="disable_device_connection_text">Disconnect this device</string>
    <!-- Text for enabling device connection. [CHAR LIMIT=60]-->
    <string name="enable_device_connection_text">Reconnect this device</string>

    <!-- Notification channel name for trusted device enrollment [CHAR LIMIT=60]-->
    <string name="trusted_device_notification_channel_name">Unlock with phone</string>
    <!-- Notification title for trusted device enrollment [CHAR LIMIT=100]-->
    <string name="trusted_device_notification_title">Let your phone unlock your profile</string>
    <!-- Notification content for trusted device enrollment [CHAR LIMIT=100]-->
    <string name="trusted_device_notification_content">Tap here to authorize this feature</string>

    <!-- Title for trusted device error dialog [CHAR LIMIT=50]-->
    <string name="trusted_device_enrollment_error_dialog_title">Something went wrong</string>
    <!-- Message for trusted device error dialog [CHAR LIMIT=150]-->
    <string name="trusted_device_enrollment_error_dialog_message">Unfortunately, this feature could not be turned on at this time. Please try again.</string>

    <!-- Title for create phone lock dialog [CHAR LIMIT=50]-->
    <string name="create_phone_lock_dialog_title">Create a screen lock on your phone</string>
    <!-- Message for create profile lock dialog [CHAR LIMIT=250]-->
    <string name="create_phone_lock_dialog_message">Your phone doesn\'t have a screen lock set. To unlock your car profile with your phone, first create a screen lock (also known as \“passcode\”) in your phone\’s settings.</string>
</resources>
