<!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/device_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/ic_smartphone"
        android:tint="@color/car_ui_color_accent"
        android:layout_marginTop="@dimen/device_detail_top_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/add_associated_device_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/instruction_detail_margin"
        android:text="@string/add_associated_device_title"
        android:textSize="@dimen/car_ui_body1_size"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.CarUi"
        app:layout_constraintTop_toBottomOf="@id/device_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/add_associated_device_instruction"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/instruction_detail_margin"
        android:text="@string/add_associated_device_instruction"
        android:textSize="@dimen/car_ui_body2_size"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/add_associated_device_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/car_ui_margin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/install_app_instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:layout_marginTop="@dimen/device_detail_margin"
        app:layout_constraintTop_toBottomOf="@id/add_associated_device_instruction"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline">
        <ImageView
            android:id="@+id/install_app_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="@dimen/device_detail_margin"
            android:layout_marginEnd="@dimen/device_detail_margin"
            android:layout_marginTop="@dimen/device_detail_margin"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_smartphone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/device_detail_button_margin"
            android:text="@string/associated_device_install_app"
            android:textSize="@dimen/car_ui_body2_size"
            android:textAppearance="@style/TextAppearance.CarUi"
            app:layout_constraintStart_toEndOf="@id/install_app_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/select_device_instruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        app:layout_constraintTop_toBottomOf="@id/install_app_instruction"
        app:layout_constraintStart_toEndOf="@id/start_guideline"
        app:layout_constraintEnd_toStartOf="@id/end_guideline">
        <ImageView
            android:id="@+id/select_device_icon"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginBottom="@dimen/device_detail_margin"
            android:layout_marginEnd="@dimen/device_detail_margin"
            android:layout_marginTop="@dimen/device_detail_margin"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_directions_car"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/associated_device_select_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/device_detail_button_margin"
            android:text="@string/associated_device_select_device"
            android:textSize="@dimen/car_ui_body2_size"
            android:textAppearance="@style/TextAppearance.CarUi"
            app:layout_constraintStart_toEndOf="@id/select_device_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/car_ui_margin" />
</androidx.constraintlayout.widget.ConstraintLayout>
